Fixed underline offset instead of position udner for consistency on ios mobile

--- a/website/style.css
+++ b/website/style.css
@@ -66,7 +66,7 @@ a {
   color: var(--text);
   text-decoration-color: var(--border);
   text-decoration-thickness: 1px;
-  text-underline-position: under;
+  text-underline-offset: 0.23rem;
 }
 a:hover {
   text-decoration-color: var(--brown);
